Changed to single add-opens arg in the scratch surefire plugin