@@ -82,17 +82,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
+				<version>3.0.0-M7</version>
 				<configuration>
-					<argLine>--illegal-access=permit</argLine>
-					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-					<argLine>--add-opens java.base/java.math=ALL-UNNAMED</argLine>
-					<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
-					<argLine>--add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
-					<argLine>--add-opens java.base/java.net=ALL-UNNAMED</argLine>
-					<argLine>--add-opens java.base/java.text=ALL-UNNAMED</argLine>
-					<argLine>--add-opens java.sql/java.sql=ALL-UNNAMED</argLine>
-					<argLine>-Dillegal-access=permit</argLine>
+					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.math=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.sql/java.sql=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 
